[gd_scene load_steps=11 format=2]

[ext_resource path="res://Art/thing.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://World/light.png" type="Texture" id=3]
[ext_resource path="res://Sound/explosion.wav" type="AudioStream" id=4]
[ext_resource path="res://Sound/deathsound.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.4, 6.4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=3]
resource_name = "LightFade"
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.764706, 0.0823529, 0.0823529, 1 ), Color( 0.764706, 0.0823529, 0.0823529, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.764706, 0.0823529, 0.0823529, 1 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 62.0

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.94902, 0.235294, 0.235294, 1 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -4.76837e-07, -2.38419e-07 )
scale = Vector2( 0.402219, 0.402219 )
texture = ExtResource( 3 )
color = Color( 0.764706, 0.0823529, 0.0823529, 1 )
shadow_enabled = true
shadow_item_cull_mask = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LightFade = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="SlowBubble" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlowBubble"]
shape = SubResource( 5 )

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="SlowBubble" to="." method="_on_SlowBubble_body_entered"]
[connection signal="body_exited" from="SlowBubble" to="." method="_on_SlowBubble_body_exited"]
